# chess_export

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  mypy.yaml
chess_export/: __main__.py  common.py
chess_export/chessdotcom/: export.py  model.py
chess_export/lichess/: export.py  model.py
chessdotcom_export/: __init__.py  __main__.py  common.py  export.py  model.py
