[metadata]
name = chess_export
version = 0.1.1
description = Export your chess.com/lichess.org games
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/seanbreckenridge/chess_export"
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = chess data

[options]
packages = find_namespace:
install_requires =
    IPython
    click>=8.0
    requests
python_requires = >=3.8
include_package_data = True

[options.packages.find]
include =
    chess_export
    chess_export.chessdotcom
    chess_export.lichess

[options.entry_points]
console_scripts =
    chess_export = chess_export.__main__:main

[options.extras_require]
testing =
    flake8
    mypy

[options.package_data]
chess_export = py.typed

[flake8]
ignore = E501,E402,W503,E266,E203

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
check_untyped_defs = True
namespace_packages = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
